Regression: Freeze after connecting capture attribute to repeat zone output #114041

Closed
opened 2023-10-22 21:05:15 +02:00 by Balázs Füvesi · 2 comments

System Information
Operating system: macOS-14.0-arm64-arm-64bit 64 Bits
Graphics card: Metal API Apple M1 1.2

Blender Version
Broken: version: 4.0.0 Beta, branch: blender-v4.0-release, commit date: 2023-10-21 13:03, hash: 2e084addb542
Worked: 4.0.0 Beta, downloaded about a week ago

Short description of error
Blender is frozen after connecting the output of the Capture Attribute node to the input of the Repeat Output node, (see pictures below).
Before connecting
Screenshot 2023-10-22 at 20.50.56.png
After connecting
Screenshot 2023-10-22 at 20.51.19.png
This does not happen if Capture Attribute is the only node in Repeate Zone.
Screenshot 2023-10-22 at 21.02.26.png
But it happens with different Capture Attribute settings and different nodes in front of Capture Attribute node.
Screenshot 2023-10-22 at 20.57.50.png

Exact steps for others to reproduce the error
Open the attached .blend file and connect the output of the Capture Attribute node to the input of the Repeat Output node.
freezeTest00.blend

Thanks!

**System Information** Operating system: macOS-14.0-arm64-arm-64bit 64 Bits Graphics card: Metal API Apple M1 1.2 **Blender Version** Broken: version: 4.0.0 Beta, branch: blender-v4.0-release, commit date: 2023-10-21 13:03, hash: `2e084addb542` Worked: 4.0.0 Beta, downloaded about a week ago **Short description of error** Blender is frozen after connecting the output of the Capture Attribute node to the input of the Repeat Output node, (see pictures below). _Before connecting_ ![Screenshot 2023-10-22 at 20.50.56.png](/attachments/d94a295f-bc48-4917-a66c-6f479d3d48ce) _After connecting_ ![Screenshot 2023-10-22 at 20.51.19.png](/attachments/d8299dc6-0b02-4c8e-b20c-4359feeb6156) This does not happen if Capture Attribute is the only node in Repeate Zone. ![Screenshot 2023-10-22 at 21.02.26.png](/attachments/b57fa8fb-2b20-434c-afc7-dba7ec179b73) But it happens with different Capture Attribute settings and different nodes in front of Capture Attribute node. ![Screenshot 2023-10-22 at 20.57.50.png](/attachments/461bcbff-3695-4fe9-8b83-6c44a7a78a10) **Exact steps for others to reproduce the error** Open the attached .blend file and connect the output of the Capture Attribute node to the input of the Repeat Output node. [freezeTest00.blend](/attachments/ff72efa4-1100-4c87-8fe9-5066f49e4cd6) Thanks!
Balázs Füvesi added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-10-22 21:05:16 +02:00
Balázs Füvesi changed title from Freeze after connecting capture attribute to repeate zone output to Freeze after connecting capture attribute to repeat zone output 2023-10-22 21:11:29 +02:00
Member

Hi, thanks for the report. Can confirm the regression, bisecting...

Hi, thanks for the report. Can confirm the regression, bisecting...
Member
Caused by 0e9f47272603b41a3131861ede826f70bc23bf3a @JacquesLucke ^
Pratik Borhade added this to the 4.0 milestone 2023-10-23 07:13:17 +02:00
Iliya Katushenock changed title from Freeze after connecting capture attribute to repeat zone output to Regression: Freeze after connecting capture attribute to repeat zone output 2023-10-23 14:20:01 +02:00
Jacques Lucke self-assigned this 2023-10-23 15:08:06 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-10-23 21:29:45 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#114041
No description provided.